--- a/index.html
+++ b/index.html
@@ -3426,8 +3426,9 @@
                 <td>0</td>
                 <td>904</td>
              </tr>
-             
         </tbody>
     </table>
+    Added this counter for no reason :|<br/>
+    <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fsamishahriyar.github.io%2Ftestmerit%2F&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a>
 </body>
 </html>
